# contract-revm

./: .gitignore  Cargo.toml  build.rs  ignore-files.txt
contracts/: foundry.toml
contracts/src/: GateLock.sol
src/: environment_deployment.rs  lib.rs
